뉴스레터 309호

--- a/index.html
+++ b/index.html
@@ -33,20 +33,10 @@
 	</tr>
 	</thead>
         <tbody>
-			<tr class="page">
+			<tr class="webzine">
 				<td></td>
-				<td>페이지</td>
-				<td><a href="html/page/jobabaIntro.html" class="preview" target="_blank">잡아바 intro 페이지-메인</a></td>
-			</tr>
-			<tr class="page">
-				<td></td>
-				<td>페이지</td>
-				<td><a href="html/page/employMain.html" class="preview" target="_blank">채용정보 페이지-메인</a></td>
-			</tr>
-			<tr class="page">
-				<td></td>
-				<td>페이지</td>
-				<td><a href="html/page/policyMain.html" class="preview" target="_blank">정책정보 페이지-메인</a></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz309.html" class="preview" target="_blank">뉴스레터 309호</a></td>
 			</tr>
         </tbody>
 	</table>
