뉴스레터 310호

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,user-scalable=no"/>
-	<title>잡아바 퍼블리싱</title>
+	<title>퍼블리싱</title>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:@300;400;500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
 <div class="container">
 	<h1>
-		잡아바 퍼블리싱 목록
+		퍼블리싱 목록
 		<div class="git"><a href="https://github.com/chaebonggi/jobabamain" target="_blank">GitHub 페이지 바로가기</a></div>
 	</h1>
 	<table class="tbl_list">
@@ -37,6 +37,11 @@
 				<td></td>
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz309.html" class="preview" target="_blank">뉴스레터 309호</a></td>
+			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz310.html" class="preview" target="_blank">뉴스레터 310호</a></td>
 			</tr>
         </tbody>
 	</table>
