--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/corp/corp03.html" class="preview" target="_blank">기업회원 뉴스레터 3호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz311.html" class="preview" target="_blank">뉴스레터 311호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
