--- a/html/thema/03.html
+++ b/html/thema/03.html
@@ -500,10 +500,16 @@
 		<article class="cont02">
 			<div class="innerSection">
 				<style>
+					.themaWrap .cont02 {
+						background-color: red;
+					}
+					.themaWrap .cont02 .innerSection {
+						max-width: 960px;
+					}
 					.themaWrap .cont02 .slideList {
 						display: flex;
 						width: 100%;
-						padding-left: 40px;
+						padding: 0 40px 0 70px;
 					}
 					.themaWrap .cont02 .slideList li {						
 						width: calc(100% / 3);
@@ -559,7 +565,12 @@
 						align-items: center;
 						justify-content: center;
 					}
-					.themaWrap .cont02 .tabCont {
+					.themaWrap .cont02 .tabCont {						
+						padding: 0 30px;
+						position: relative;						
+						overflow: hidden;						
+					}
+					.themaWrap .cont02 .tabCont .tabItem {
 						padding-top: 74px;
 						background: #fff;
 						border-radius: 20px;
@@ -661,6 +672,35 @@
 						color: #4b50a0;
 						font-size: 22px;
 					}
+					.themaWrap .cont02 .tabCont .contBox03 {
+						position: relative;
+						background: #edf0f9;
+						height: 300px;
+					}
+					.themaWrap .tabCont .control {
+						width: 100%;
+						position: absolute;
+						top: 450px;
+						left: 0;
+						z-index: 10;
+					}
+					.themaWrap .tabCont .control span {
+						display: block;
+						width: 50px;
+						height: 50px;
+						position: absolute;
+						cursor: pointer;
+					}
+					.themaWrap .tabCont .control .btn_prev {
+						left: 0;
+						background: url(./images/20240403/cont02_arrow_prev.png) no-repeat;
+						background-size: contain;
+					}
+					.themaWrap .tabCont .control .btn_next {
+						right: 0;
+						background: url(./images/20240403/cont02_arrow_next.png) no-repeat;
+						background-size: contain;
+					}
 				</style>
 				<div class="tabWrap">
 					<ul class="slideList">
@@ -670,34 +710,98 @@
 					</ul>
 					<div class="tabCont">
 						<div class="swiper-wrapper">
-							<div class="tabItem swiper-slide">
-								<div class="contBox01 icon01">
-									<p>온실가스, 탄소배출 감축을 위해 화석연료를<br>
-										신재생에너지로 대체하는 사업분야입니다.</p>
+							<div class="swiper-slide">
+								<div class="tabItem">
+									<div class="contBox01 icon01">
+										<p>온실가스, 탄소배출 감축을 위해 화석연료를<br>
+											신재생에너지로 대체하는 사업분야입니다.</p>
+									</div>
+									<div class="contBox02 bg01">
+										<div class="titWrap"><span>주요기술</span></div>
+										<ul>
+											<li>
+												<p>
+													<span class="gBold">태양광 기술</span>
+													태양광 에너지를 활용하여 전기를 생산하는 기술입니다.<br>
+													최근 제로에너지건축물 의무대상 확대에 따라 태양광 모듈을 건축자재로 활용하는<br>
+													BIPV 기술 등이 주목받고 있습니다.
+												</p>
+											</li>
+											<li>
+												<p>
+													<span class="gBold">신재생에너지 시스템</span>
+													지속 가능한 에너지원을 이용해 전력을 생산·공급하는 일련의 시스템입니다.<br>
+													변동성이 높은 신재생에너지를 효율적으로 관리하기 위한 EMS, ESS 등의 기술이<br>
+													각광받고 있습니다.
+												</p>
+											</li>
+										</ul>
+									</div>
+									<div class="contBox03">
+										<div class="titWrap"><span>잡아바 탐나는기업</span></div>
+									</div>
 								</div>
-								<div class="contBox02 bg01">
-									<div class="titWrap"><span>주요기술</span></div>
-									<ul>
-										<li>
-											<p>
-												<span class="gBold">태양광 기술</span>
-												태양광 에너지를 활용하여 전기를 생산하는 기술입니다.<br>
-												최근 제로에너지건축물 의무대상 확대에 따라 태양광 모듈을 건축자재로 활용하는<br>
-												BIPV 기술 등이 주목받고 있습니다.
-											</p>
-										</li>
-										<li>
-											<p>
-												<span class="gBold">신재생에너지 시스템</span>
-												지속 가능한 에너지원을 이용해 전력을 생산·공급하는 일련의 시스템입니다.<br>
-												변동성이 높은 신재생에너지를 효율적으로 관리하기 위한 EMS, ESS 등의 기술이<br>
-												각광받고 있습니다.
-											</p>
-										</li>
-									</ul>
+							</div>
+							<div class="swiper-slide">
+								<div class="tabItem">
+									<div class="contBox01 icon01">
+										<p>11111111</p>
+									</div>
+									<div class="contBox02 bg01">
+										<div class="titWrap"><span>주요기술</span></div>
+										<ul>
+											<li>
+												<p>
+													<span class="gBold">태양광 기술</span>
+													태양광 에너지를 활용하여 전기를 생산하는 기술입니다.<br>
+													최근 제로에너지건축물 의무대상 확대에 따라 태양광 모듈을 건축자재로 활용하는<br>
+													BIPV 기술 등이 주목받고 있습니다.
+												</p>
+											</li>
+											<li>
+												<p>
+													<span class="gBold">신재생에너지 시스템</span>
+													지속 가능한 에너지원을 이용해 전력을 생산·공급하는 일련의 시스템입니다.<br>
+													변동성이 높은 신재생에너지를 효율적으로 관리하기 위한 EMS, ESS 등의 기술이<br>
+													각광받고 있습니다.
+												</p>
+											</li>
+										</ul>
+									</div>
+									<div class="contBox03">
+										<div class="titWrap"><span>잡아바 탐나는기업</span></div>
+									</div>
 								</div>
-								<div class="contBox03">
-									<div class="titWrap"><span>잡아바 탐나는기업</span></div>
+							</div>
+							<div class="swiper-slide">
+								<div class="tabItem">
+									<div class="contBox01 icon01">
+										<p>2222222</p>
+									</div>
+									<div class="contBox02 bg01">
+										<div class="titWrap"><span>주요기술</span></div>
+										<ul>
+											<li>
+												<p>
+													<span class="gBold">태양광 기술</span>
+													태양광 에너지를 활용하여 전기를 생산하는 기술입니다.<br>
+													최근 제로에너지건축물 의무대상 확대에 따라 태양광 모듈을 건축자재로 활용하는<br>
+													BIPV 기술 등이 주목받고 있습니다.
+												</p>
+											</li>
+											<li>
+												<p>
+													<span class="gBold">신재생에너지 시스템</span>
+													지속 가능한 에너지원을 이용해 전력을 생산·공급하는 일련의 시스템입니다.<br>
+													변동성이 높은 신재생에너지를 효율적으로 관리하기 위한 EMS, ESS 등의 기술이<br>
+													각광받고 있습니다.
+												</p>
+											</li>
+										</ul>
+									</div>
+									<div class="contBox03">
+										<div class="titWrap"><span>잡아바 탐나는기업</span></div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -717,7 +821,33 @@
 
 	<script>
 	$(document).ready(function(){
-
+		var swiper = new Swiper('.tabCont', {
+            loop: true,
+			allowTouchMove: true,
+            slidesPerView: 1,
+			autoHeight : true,
+			spaceBetween: 40,
+            navigation: {
+                nextEl: '.tabWrap .btn_next',
+                prevEl: '.tabWrap .btn_prev',
+            },
+            pagination: {
+                el: '.tabWrap .slideList',
+                clickable: 'true',
+                type: 'custom',
+                renderCustom: function (swiper, current) {
+					$('.slideList').children().eq(current - 1).addClass('active').siblings().removeClass('active');
+					$('.slideList').on('click', 'li', function () {
+						swiper.slideToLoop($(this).index(), 500, false)
+					})
+				}
+            },
+			breakpoints: {        
+				640: {
+					allowTouchMove: false,
+				},
+			},
+        })
 		
 
 		
