뉴스레터 312호

--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz311.html" class="preview" target="_blank">뉴스레터 311호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/thema/03.html" class="preview" target="_blank">테마3호 녹색일자리</a></td>
+			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz312.html" class="preview" target="_blank">뉴스레터 312호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
