--- a/html/thema/03.html
+++ b/html/thema/03.html
@@ -142,6 +142,7 @@
 				</div>
 			</div>			
 		</article>
+		
 		<article class="cont02">
 			<div class="innerSection">
 				<div class="tabWrap">
@@ -156,7 +157,7 @@
 							<div class="swiper-slide">
 								<div class="tabItem">
 									<div class="contBox01 icon01">
-										<p>온실가스, 탄소배출 감축을 위해 화석연료를<br>
+										<p>온실가스, 탄소배출 감축을 위해 화석연료를<br class="for_mo">
 											신재생에너지로 대체하는 사업분야입니다.</p>
 									</div>
 									<div class="contBox02 bg01">
@@ -166,7 +167,7 @@
 												<p>
 													<span class="gBold">태양광 기술</span>
 													태양광 에너지를 활용하여 전기를 생산하는 기술입니다.<br>
-													최근 제로에너지건축물 의무대상 확대에 따라 태양광 모듈을 건축자재로 활용하는<br>
+													최근 제로에너지건축물 의무대상 확대에 따라 태양광 모듈을 건축자재로 활용하는<br class="for_mo">
 													BIPV 기술 등이 주목받고 있습니다.
 												</p>
 											</li>
@@ -174,7 +175,7 @@
 												<p>
 													<span class="gBold">신재생에너지 시스템</span>
 													지속 가능한 에너지원을 이용해 전력을 생산·공급하는 일련의 시스템입니다.<br>
-													변동성이 높은 신재생에너지를 효율적으로 관리하기 위한 EMS, ESS 등의 기술이<br>
+													변동성이 높은 신재생에너지를 효율적으로 관리하기 위한 EMS, ESS 등의 기술이<br class="for_mo">
 													각광받고 있습니다.
 												</p>
 											</li>
@@ -223,7 +224,7 @@
 							<div class="swiper-slide">
 								<div class="tabItem">
 									<div class="contBox01 icon02">
-										<p>전기차, 수소차 등 대체 에너지원을 사용하는<br>
+										<p>전기차, 수소차 등 대체 에너지원을 사용하는<br class="for_mo">
 											친환경 모빌리티의 관심도가 높아지고 있습니다.</p>
 									</div>
 									<div class="contBox02 bg02">
@@ -232,15 +233,15 @@
 											<li>
 												<p>
 													<span class="gBold">수소연료 전지차</span>
-													수소를 연료로 주행하는 차량으로 충전시간이 짧고 배기가스를 배출하지 않는다는<br>
-													장점이 있습니다. 수소차의 핵심인 수소연료전지 기술 뿐만 아니라 수소 저장 및<br> 
+													수소를 연료로 주행하는 차량으로 충전시간이 짧고 배기가스를 배출하지 않는다는<br class="for_mo">
+													장점이 있습니다. 수소차의 핵심인 수소연료전지 기술 뿐만 아니라 수소 저장 및<br class="for_mo">
 													충전시설에 대한 관심이 증대되고 있습니다.
 												</p>
 											</li>
 											<li>
 												<p>
 													<span class="gBold">전기자동차</span>
-													전기차의 충전 문제를 해결하기 위해 급속충전 및 무선충전 기술이 개발되고 있고,<br>
+													전기차의 충전 문제를 해결하기 위해 급속충전 및 무선충전 기술이 개발되고 있고,<br class="for_mo">
 													고성능과 안전성을 담보하는 전고체배터리 등 차세대 기술도 주목받고 있습니다.
 												</p>
 											</li>
@@ -290,9 +291,9 @@
 							<div class="swiper-slide">
 								<div class="tabItem">
 									<div class="contBox01 icon03">
-										<p>건축·주거 분야에서도 녹색일자리는<br>
+										<p>건축·주거 분야에서도 녹색일자리는<br class="for_mo">
 											화두로 주목받고 있습니다. <br>
-											인간의 주거공간, 형태 등을 친환경적으로 설계하는<br>
+											인간의 주거공간, 형태 등을 친환경적으로 설계하는<br class="for_mo">
 											친환경 건축에 주목할 필요가 있습니다.</p>
 									</div>
 									<div class="contBox02 bg03">
@@ -301,8 +302,8 @@
 											<li>
 												<p>
 													<span class="gBold">스마트그리드</span>
-													스마트그리드는 정보통신 기술을 활용하여 전력을 효율적으로 관리하는 시스템으로,<br>
-													건물 내 에너지 사용을 최적화하고 신재생 에너지를 유기적으로 통합하는 등<br>
+													스마트그리드는 정보통신 기술을 활용하여 전력을 효율적으로 관리하는 시스템으로,<br class="for_mo">
+													건물 내 에너지 사용을 최적화하고 신재생 에너지를 유기적으로 통합하는 등<br class="for_mo">
 													친환경건축에 있어 중요한 기술로 주목받고 있습니다.
 												</p>
 											</li>
@@ -310,16 +311,16 @@
 												<p>
 													<span class="gBold">패시브 건축</span>
 													단열, 열교차단 등 다양한 건축공법을 활용해 실내 에너지 효율성을 극대회하는 기술입니다.<br>
-													전통적인 냉난방 시스템을 최소화하고 천연 자원과 환경 조건의 사용을 극대화하여<br> 
+													전통적인 냉난방 시스템을 최소화하고 천연 자원과 환경 조건의 사용을 극대화하여<br class="for_mo">
 													에너지 소비를 줄이는 것을 목표로 합니다.
 												</p>
 											</li>
 											<li>
 												<p>
 													<span class="gBold">액티브 건축</span>
-													건축물 자체적으로 에너지를 생산하여 외부에서 별도의 에너지를 공급받지 않는<br>
+													건축물 자체적으로 에너지를 생산하여 외부에서 별도의 에너지를 공급받지 않는<br class="for_mo">
 													건축 기술입니다. 주로, 태양광, 태양열, 지열, 풍력, 바이오매스 에너지를 활용합니다.<br> 
-													패시브 건축과 달리 에너지 소비가 높을 수 있지만, 적절한 설계와 운영을 통해 에너지<br> 
+													패시브 건축과 달리 에너지 소비가 높을 수 있지만, 적절한 설계와 운영을 통해 에너지<br class="for_mo">
 													효율성을 향상시킬 수 있습니다.
 												</p>
 											</li>
@@ -465,6 +466,7 @@
 				</ul>
 			</div>
 		</article>
+
 	</div>
 
 
@@ -491,11 +493,11 @@
 					})
 				}
             },
-			breakpoints: {        
-				640: {
-					allowTouchMove: false,
-				},
-			},
+			// breakpoints: {        
+			// 	640: {
+			// 		allowTouchMove: false,
+			// 	},
+			// },
         })
 		
 
