--- a/html/thema/03.html
+++ b/html/thema/03.html
@@ -62,7 +62,7 @@
 	<div class="themaWrap">
 		<article class="mainVisual">
 			<div class="innerSection">
-				<h2><img src="./images/20240403/main_tit.png" alt="녹색일자리"></h2>
+				<h2><img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/main_tit.png" alt="녹색일자리"></h2>
 				<p class="txt">
 					환경오염문제와 인공지능의 발전에 따라 사라지거나 새로 생기는 직업들이 있는데요,<br>
 					<span class="gBold">2030년까지 약 3,000만개의 녹색일자리가 창출될 것</span>으로 예측되고 있습니다.<br>
@@ -185,9 +185,9 @@
 										<div class="titWrap"><span>잡아바 탐나는기업</span></div>
 										<ul>
 											<li>
-												<a href="" target="_blank">
+												<a href="https://www.jobaba.net/empmn/desEntDtl.do?bizrno=3018133140" target="_blank">
 													<div class="imgWrap">
-														<img src="./images/20240403/cont02_logo01.png" alt="이앤에이치(주)">
+														<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont02_logo01.png" alt="이앤에이치(주)">
 													</div>
 													<div class="txtWrap">
 														<p>이앤에이치(주)</p>
@@ -196,9 +196,9 @@
 												</a>
 											</li>
 											<li>
-												<a href="" target="_blank">
+												<a href="https://www.jobaba.net/empmn/desEntDtl.do?bizrno=3128156143" target="_blank">
 													<div class="imgWrap">
-														<img src="./images/20240403/cont02_logo02.png" alt="㈜엘오티베큠">
+														<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont02_logo02.png" alt="㈜엘오티베큠">
 													</div>
 													<div class="txtWrap">
 														<p>㈜엘오티베큠</p>
@@ -207,9 +207,9 @@
 												</a>
 											</li>
 											<li>
-												<a href="" target="_blank">
+												<a href="https://www.jobaba.net/empmn/desEntDtl.do?bizrno=3268100648" target="_blank">
 													<div class="imgWrap">
-														<img src="./images/20240403/cont02_logo03.png" alt="바이오코엔">
+														<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont02_logo03.png" alt="바이오코엔">
 													</div>
 													<div class="txtWrap">
 														<p>바이오코엔</p>
@@ -251,9 +251,9 @@
 										<div class="titWrap"><span>잡아바 탐나는기업</span></div>
 										<ul>
 											<li>
-												<a href="" target="_blank">
+												<a href="https://www.jobaba.net/empmn/desEntDtl.do?bizrno=1018109147" target="_blank">
 													<div class="imgWrap">
-														<img src="./images/20240403/cont02_logo04.png" alt="현대자동차㈜">
+														<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont02_logo04.png" alt="현대자동차㈜">
 													</div>
 													<div class="txtWrap">
 														<p>현대자동차㈜</p>
@@ -262,9 +262,9 @@
 												</a>
 											</li>
 											<li>
-												<a href="" target="_blank">
+												<a href="https://www.jobaba.net/empmn/desEntDtl.do?bizrno=1348724586&entCd=L68982" target="_blank">
 													<div class="imgWrap">
-														<img src="./images/20240403/cont02_logo05.png" alt="㈜디와이솔리텍">
+														<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont02_logo05.png" alt="㈜디와이솔리텍">
 													</div>
 													<div class="txtWrap">
 														<p>㈜디와이솔리텍</p>
@@ -273,9 +273,9 @@
 												</a>
 											</li>
 											<li>
-												<a href="" target="_blank">
+												<a href="https://www.jobaba.net/empmn/desEntDtl.do?bizrno=5598601539" target="_blank">
 													<div class="imgWrap">
-														<img src="./images/20240403/cont02_logo06.png" alt="SKIE 테크놀로지㈜">
+														<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont02_logo06.png" alt="SKIE 테크놀로지㈜">
 													</div>
 													<div class="txtWrap">
 														<p>SKIE 테크놀로지㈜</p>
@@ -330,9 +330,9 @@
 										<div class="titWrap"><span>잡아바 탐나는기업</span></div>
 										<ul>
 											<li>
-												<a href="" target="_blank">
+												<a href="https://www.jobaba.net/empmn/desEntDtl.do?bizrno=1298640821&entCd=F89367" target="_blank">
 													<div class="imgWrap">
-														<img src="./images/20240403/cont02_logo07.png" alt="㈜레인보우테크">
+														<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont02_logo07.png" alt="㈜레인보우테크">
 													</div>
 													<div class="txtWrap">
 														<p>㈜레인보우테크</p>
@@ -341,9 +341,9 @@
 												</a>
 											</li>
 											<li>
-												<a href="" target="_blank">
+												<a href="https://www.jobaba.net/empmn/desEntDtl.do?bizrno=1818800592&entCd=HT7158" target="_blank">
 													<div class="imgWrap">
-														<img src="./images/20240403/cont02_logo08.png" alt="한국그린빌딩연구소㈜">
+														<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont02_logo08.png" alt="한국그린빌딩연구소㈜">
 													</div>
 													<div class="txtWrap">
 														<p>한국그린빌딩연구소㈜</p>
@@ -372,7 +372,7 @@
 				<p class="txt">녹색일자리 분야와 더불어<br>
 					새롭게 주목받는 분야의 수도권 내 우수채용공고를<br>
 					<span class="gBold">잡아바 신성장 산업관</span>에서 확인해 보세요!</p>
-				<a href="" target="_blank" class="linkBtn"><span class="gBold">자세히 보기</span></a>
+				<a href="https://www.jobaba.net/cntn/newGrowtMain.do" target="_blank" class="linkBtn"><span class="gBold">자세히 보기</span></a>
 			</div>
 		</article>
 
@@ -380,31 +380,31 @@
 			<div class="innerSection">
 				<ul>
 					<li>
-						<a href="" target="_blank">
+						<a href="https://www.jobaba.net/entCntnts/exhb/exhbViewNewGrowth.do?seq=100&gubunCd=3" target="_blank">
 							<div class="linkWrap"><span>GO</span></div>
 							<p>배터리 산업<br> 채용관</p>
 						</a>
 					</li>
 					<li>
-						<a href="" target="_blank">
+						<a href="https://www.jobaba.net/entCntnts/exhb/exhbViewNewGrowth.do?seq=99&gubunCd=2" target="_blank">
 							<div class="linkWrap"><span>GO</span></div>
 							<p>반도체 산업<br> 채용관</p>
 						</a>
 					</li>
 					<li>
-						<a href="" target="_blank">
+						<a href="https://www.jobaba.net/entCntnts/exhb/exhbViewNewGrowth.do?seq=101&gubunCd=4" target="_blank">
 							<div class="linkWrap"><span>GO</span></div>
 							<p>첨단 모빌리티 산업<br> 채용관</p>
 						</a>
 					</li>
 					<li>
-						<a href="" target="_blank">
+						<a href="https://www.jobaba.net/entCntnts/exhb/exhbViewNewGrowth.do?seq=96&gubunCd=6" target="_blank">
 							<div class="linkWrap"><span>GO</span></div>
 							<p>바이오 산업<br> 채용관</p>
 						</a>
 					</li>
 					<li>
-						<a href="" target="_blank">
+						<a href="https://www.jobaba.net/entCntnts/exhb/exhbViewNewGrowth.do?seq=122&gubunCd=9" target="_blank">
 							<div class="linkWrap"><span>GO</span></div>
 							<p>AI빅데이터 산업<br> 채용관</p>
 						</a>
@@ -417,7 +417,7 @@
 			<div class="innerSection">
 				<div class="titWrap">
 					<div class="imgWrap">
-						<img src="./images/20240403/cont05_tit.png" alt="잡아바와 함께">
+						<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont05_tit.png" alt="잡아바와 함께">
 					</div>
 					<p class="txt gBold"><span class="gBold">녹색일자리</span> 알아봅시다!</p>
 				</div>
@@ -428,36 +428,36 @@
 				</div>
 				<ul>
 					<li>
-						<a href="" target="_blank">
+						<a href="https://www.jobaba.net/thema/5075/01" target="_blank">
 							<div class="imgWrap">
-								<img src="./images/20240403/cont05_list01.png" alt="녹색 · 에너지 인재">
+								<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont05_list01.png" alt="녹색 · 에너지 인재">
 							</div>
 							<p class="txt">녹색 · 에너지 인재<br>
 								10만 명 양성하겠습니다.</p>
 						</a>
 					</li>
 					<li>
-						<a href="" target="_blank">
+						<a href="https://www.jobaba.net/thema/2661/03" target="_blank">
 							<div class="imgWrap">
-								<img src="./images/20240403/cont05_list02.png" alt="[한국판 뉴딜 프로젝트]">
+								<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont05_list02.png" alt="[한국판 뉴딜 프로젝트]">
 							</div>
 							<p class="txt">[한국판 뉴딜 프로젝트]<br>
 								② 그린 뉴딜</p>
 						</a>
 					</li>
 					<li>
-						<a href="" target="_blank">
+						<a href="https://www.jobaba.net/thema/4877/01" target="_blank">
 							<div class="imgWrap">
-								<img src="./images/20240403/cont05_list03.png" alt="'신재생 에너지전문가'">
+								<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont05_list03.png" alt="'신재생 에너지전문가'">
 							</div>
 							<p class="txt">지구를 살리는<br>
 								'신재생 에너지전문가'</p>
 						</a>
 					</li>
 					<li>
-						<a href="" target="_blank">
+						<a href="https://www.jobaba.net/thema/2636/03" target="_blank">
 							<div class="imgWrap">
-								<img src="./images/20240403/cont05_list04.png" alt="'그린 에너지'란?">
+								<img src="https://cdn.jsdelivr.net/gh/chaebonggi/jobabamain/html/thema/images/20240403/cont05_list04.png" alt="'그린 에너지'란?">
 							</div>
 							<p class="txt">[딱풀이]<br>
 								'그린 에너지'란?</p>
