--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz312.html" class="preview" target="_blank">뉴스레터 312호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/event/event02.html" class="preview" target="_blank">이벤트 AI역량검사</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
