--- a/html/event/event02.html
+++ b/html/event/event02.html
@@ -121,7 +121,7 @@
 						<ul class="ev_info">
 							<li>
 								<span class="e_tit">이벤트 기간</span>
-								<p class="e_txt">2024년 4월 8일(월) ~ 4월 28일(일) / 21일간 진행</p>
+								<p class="e_txt">2024년 4월 9일(화) ~ 4월 28일(일) / 20일간 진행</p>
 							</li>
 							<li>
 								<span class="e_tit">당첨자 발표</span>
