--- a/html/event/event02.html
+++ b/html/event/event02.html
@@ -254,7 +254,7 @@
 							취업지원<br>
 							서비스</strong>
 					</li>
-					<li><a href="">
+					<li><a href="https://www.jobaba.net/mber/login/chkLogin.do?rtnPath=/mber/myPage/resume/jbhntRegForm.do">
 						<strong class="gBold">구직정보 등록</strong>
 						<p>
 							근로 희망 조건(연봉, 근무지, 직무 등)을<br class="for_mo">
