--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
 				<td>페이지</td>
 				<td><a href="html/event/event02.html" class="preview" target="_blank">이벤트 AI역량검사</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/new마이페이지_커리어부트캠프.html" class="preview" target="_blank">new마이페이지_커리어부트캠프</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
