--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 				<td>페이지</td>
 				<td><a href="html/page/new마이페이지_커리어부트캠프.html" class="preview" target="_blank">new마이페이지_커리어부트캠프</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz313.html" class="preview" target="_blank">뉴스레터 313호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
