--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz313.html" class="preview" target="_blank">뉴스레터 313호</a></td>
 			</tr>
+			<tr class="etc">
+				<td></td>
+				<td>기타</td>
+				<td><a href="html/etc/멘토링_반려.html" class="preview" target="_blank">멘토링_반려</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
