--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
 				<td>기타</td>
 				<td><a href="html/etc/멘토링_반려.html" class="preview" target="_blank">멘토링_반려</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/corp/corp04.html" class="preview" target="_blank">기업회원 뉴스레터 4호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
