--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/corp/corp04.html" class="preview" target="_blank">기업회원 뉴스레터 4호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/잡아바_취업교육.html" class="preview" target="_blank">잡아바_취업교육</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
