--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
 				<td>페이지</td>
 				<td><a href="html/page/잡아바_취업교육.html" class="preview" target="_blank">잡아바_취업교육</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz314.html" class="preview" target="_blank">뉴스레터 314호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
