--- a/html/thema/04.html
+++ b/html/thema/04.html
@@ -119,7 +119,7 @@
 								<p class="gBold">직장 적응 컨설팅  제공</p>
 							</div>
 							<ul>
-								<li>일자리 전문가(전담 직업상담사)를 통한 1:1 맞춤 참여자<br> 컨설팅 진행</li>
+								<li>일자리 전문가(전담 직업상담사)를 통한 1:1 맞춤 참여자 컨설팅 진행</li>
 							</ul>
 						</div>
 					</div>
@@ -153,7 +153,7 @@
 								</li>
 								<li>
 									<strong class="gBold">지원자격</strong>
-									<p>경기도내 거주 만18세~39세 미취업 구직 청년<br> <span>(입사일 기준)</span></p>
+									<p>경기도내 거주 만18세~39세 미취업 구직 청년<br class="forMo"> <span>(입사일 기준)</span></p>
 								</li>
 								<li>
 									<strong class="gBold">지원방법</strong>
