--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz314.html" class="preview" target="_blank">뉴스레터 314호</a></td>
 			</tr>
+			<tr class="thema">
+				<td></td>
+				<td>테마</td>
+				<td><a href="html/thema/04.html" class="preview" target="_blank">테마 4호 일자리매치업 취업지원</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
