--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz316.html" class="preview" target="_blank">뉴스레터 316호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz317.html" class="preview" target="_blank">뉴스레터 317호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
