--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz317.html" class="preview" target="_blank">뉴스레터 317호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/잡아바_일자리지원사업.html" class="preview" target="_blank">잡아바_일자리지원사업</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
