--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
 				<td>페이지</td>
 				<td><a href="html/page/잡아바_일자리지원사업.html" class="preview" target="_blank">잡아바_일자리지원사업</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/잡아바_청년인턴채용관.html" class="preview" target="_blank">잡아바_청년인턴채용관</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
