--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
 				<td>페이지</td>
 				<td><a href="html/page/잡아바_청년인턴채용관.html" class="preview" target="_blank">잡아바_청년인턴채용관</a></td>
 			</tr>
+			<tr class="event">
+				<td></td>
+				<td>이벤트</td>
+				<td><a href="html/event/event03.html" class="preview" target="_blank">취업성공 축하이벤트</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
