--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
 				<td>이벤트</td>
 				<td><a href="html/event/event03.html" class="preview" target="_blank">취업성공 축하이벤트</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz318.html" class="preview" target="_blank">뉴스레터 318호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
