--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz318.html" class="preview" target="_blank">뉴스레터 318호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz319.html" class="preview" target="_blank">뉴스레터 319호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
