--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz319.html" class="preview" target="_blank">뉴스레터 319호</a></td>
 			</tr>
+			<tr class="thema">
+				<td></td>
+				<td>테마</td>
+				<td><a href="html/thema/04.html" class="preview" target="_blank">테마 5호 공공기관 직무캠프</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
