--- a/html/thema/05.html
+++ b/html/thema/05.html
@@ -63,10 +63,10 @@
 		<article class="mainVisual">
 			<div class="innerSection">
 				<h2>
-          <img src="./images/20240528/main_tit.png" alt="공공기관 직무캠프">
+          <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/main_tit.png" alt="공공기관 직무캠프">
         </h2>
         <div class="imgWrap">
-          <img src="./images/20240528/main_item.png" alt="">
+          <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/main_item.png" alt="">
         </div>
         <div class="mainInfo">
           <ul>
@@ -331,7 +331,7 @@
                       <p>행정인원</p>
                     </div>
                     <div class="listImg">
-                      <img src="./images/20240528/list_item01.png" alt="[파주시] 하반기 청년 행정체험 참여자 모집">
+                      <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/list_item01.png" alt="[파주시] 하반기 청년 행정체험 참여자 모집">
                     </div>
                     <div class="listInfo">
                       <p class="tit">[파주시] 하반기 청년 행정체험 참여자 모집</p>
@@ -361,7 +361,7 @@
                       <p>행정인원</p>
                     </div>
                     <div class="listImg">
-                      <img src="./images/20240528/list_item02.png" alt="[구리시] 하반기 청년 행복알바 참여자 모집">
+                      <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/list_item02.png" alt="[구리시] 하반기 청년 행복알바 참여자 모집">
                     </div>
                     <div class="listInfo">
                       <p class="tit">[구리시] 하반기 청년 행복알바 참여자 모집</p>
@@ -386,7 +386,7 @@
                       <p>행정인원</p>
                     </div>
                     <div class="listImg">
-                      <img src="./images/20240528/list_item01.png" alt="[성남시] 하계 대학생 바이오 인턴십 사업">
+                      <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/list_item01.png" alt="[성남시] 하계 대학생 바이오 인턴십 사업">
                     </div>
                     <div class="listInfo">
                       <p class="tit">[성남시] 하계 대학생 바이오 인턴십 사업</p>
@@ -411,7 +411,7 @@
                       <p>행정인원</p>
                     </div>
                     <div class="listImg">
-                      <img src="./images/20240528/list_item03.png" alt="[성남시] 하계 대학생 지방행정체험 연수생 선발">
+                      <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/list_item03.png" alt="[성남시] 하계 대학생 지방행정체험 연수생 선발">
                     </div>
                     <div class="listInfo">
                       <p class="tit">[성남시] 하계 대학생 지방행정체험 연수생 선발</p>
@@ -441,7 +441,7 @@
                       <p>행정인원</p>
                     </div>
                     <div class="listImg">
-                      <img src="./images/20240528/list_item03.png" alt="[이천시] 청년일자리 공공인턴사업 참여자 모집">
+                      <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/list_item03.png" alt="[이천시] 청년일자리 공공인턴사업 참여자 모집">
                     </div>
                     <div class="listInfo">
                       <p class="tit">[이천시] 청년일자리 공공인턴사업 참여자 모집</p>
@@ -466,7 +466,7 @@
                       <p>행정인원</p>
                     </div>
                     <div class="listImg">
-                      <img src="./images/20240528/list_item02.png" alt="[평택시] 대학생 행정인턴 모집">
+                      <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/list_item02.png" alt="[평택시] 대학생 행정인턴 모집">
                     </div>
                     <div class="listInfo">
                       <p class="tit">[평택시] 대학생 행정인턴 모집</p>
@@ -496,7 +496,7 @@
                       <p>행정인원</p>
                     </div>
                     <div class="listImg">
-                      <img src="./images/20240528/list_item01.png" alt="[안양시] 하계 대학생 행정체험연수 참여자 모집">
+                      <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/list_item01.png" alt="[안양시] 하계 대학생 행정체험연수 참여자 모집">
                     </div>
                     <div class="listInfo">
                       <p class="tit">[안양시] 하계 대학생 행정체험연수 참여자 모집</p>
@@ -521,7 +521,7 @@
                       <p>행정인원</p>
                     </div>
                     <div class="listImg">
-                      <img src="./images/20240528/list_item02.png" alt="[시흥시] 지역주도형 청년일자리 사업 청년 뉴딜일자리 참여 청년 모집">
+                      <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/list_item02.png" alt="[시흥시] 지역주도형 청년일자리 사업 청년 뉴딜일자리 참여 청년 모집">
                     </div>
                     <div class="listInfo">
                       <p class="tit">[시흥시] 지역주도형 청년일자리 사업 청년 뉴딜일자리 참여 청년 모집</p>
@@ -546,7 +546,7 @@
                       <p>행정인원</p>
                     </div>
                     <div class="listImg">
-                      <img src="./images/20240528/list_item03.png" alt="[군포시] 하계 대학생 아르바이트 모집">
+                      <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/list_item03.png" alt="[군포시] 하계 대학생 아르바이트 모집">
                     </div>
                     <div class="listInfo">
                       <p class="tit">[군포시] 하계 대학생 아르바이트 모집</p>
@@ -571,7 +571,7 @@
                       <p>행정인원</p>
                     </div>
                     <div class="listImg">
-                      <img src="./images/20240528/list_item01.png" alt="[부천시] 하반기 청년 행정체험단 모집">
+                      <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/list_item01.png" alt="[부천시] 하반기 청년 행정체험단 모집">
                     </div>
                     <div class="listInfo">
                       <p class="tit">[부천시] 하반기 청년 행정체험단 모집</p>
@@ -596,7 +596,7 @@
                       <p>행정인원</p>
                     </div>
                     <div class="listImg">
-                      <img src="./images/20240528/list_item02.png" alt="[안산시] 하계 대학생 행정체험연수 참여자 모집">
+                      <img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/list_item02.png" alt="[안산시] 하계 대학생 행정체험연수 참여자 모집">
                     </div>
                     <div class="listInfo">
                       <p class="tit">[안산시] 하계 대학생 행정체험연수 참여자 모집</p>
@@ -626,8 +626,8 @@
     <article class="cont03">
       <div class="innerSection">
         <div class="contTit">
-          <p class="cTit01"><img src="./images/20240528/cont03_tit.png" alt="하반기 취업준비도"></p>
-          <p class="cTit02"><img src="./images/20240528/cont03_tit02.png" alt="잡아바와 함께 하세요!"></p>
+          <p class="cTit01"><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/cont03_tit.png" alt="하반기 취업준비도"></p>
+          <p class="cTit02"><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240528/cont03_tit02.png" alt="잡아바와 함께 하세요!"></p>
         </div>
         <div class="contBox">
           <div class="item">
@@ -699,8 +699,6 @@
         </div>
       </div>
     </article>
-
-
 	</div>
 
 
@@ -723,9 +721,7 @@
         $('.tabWrap .tabCont').removeClass('active');
         $('#tab-1').addClass('active');
       }
-    });
-
-		
+    });		
 	});
 	</script>
 
