--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
 				<td>테마</td>
 				<td><a href="html/thema/05.html" class="preview" target="_blank">테마 5호 공공기관 직무캠프</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz320.html" class="preview" target="_blank">뉴스레터 320호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
