--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz320.html" class="preview" target="_blank">뉴스레터 320호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz321.html" class="preview" target="_blank">뉴스레터 321호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
