--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/corp/corp06.html" class="preview" target="_blank">기업회원 뉴스레터 6월호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz323.html" class="preview" target="_blank">뉴스레터 323호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
