--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz323.html" class="preview" target="_blank">뉴스레터 323호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/잡아바_new메인(정책).html" class="preview" target="_blank">잡아바_new메인(정책)</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
