--- a/index.html
+++ b/index.html
@@ -178,6 +178,16 @@
 				<td>페이지</td>
 				<td><a href="html/page/잡아바_new메인(정책).html" class="preview" target="_blank">잡아바_new메인(정책)</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/잡아바_new메인(채용).html" class="preview" target="_blank">잡아바_new메인(채용)</a></td>
+			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/잡아바_new메인(채용_로그인).html" class="preview" target="_blank">잡아바_new메인(채용_로그인)</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
