--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
 				<td>페이지</td>
 				<td><a href="html/page/잡아바_new메인(채용_로그인).html" class="preview" target="_blank">잡아바_new메인(채용_로그인)</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/온라인박람회_템플릿.html" class="preview" target="_blank">온라인박람회_템플릿</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
