--- a/html/thema/06.html
+++ b/html/thema/06.html
@@ -101,8 +101,8 @@
 				<div class="listWrap">
 					<div class="tabWrap">
 						<ul class="tabList">
-                            <li class="active" data-tab="tabItemA_1"><a href="javascript:void(0);"><span class="gBold">AI 기반<br> 학습 시스템</span></a></li>
-                            <li data-tab="tabItemA_2" class=""><a href="javascript:void(0);"><span class="gBold">VR/AR을 활용한<br> 실감형 교육</span></a></li>
+                            <li class="active" data-tab="tabItemA_1"><a href="#link"><span class="gBold">AI 기반<br> 학습 시스템</span></a></li>
+                            <li data-tab="tabItemA_2" class=""><a href="#link"><span class="gBold">VR/AR을 활용한<br> 실감형 교육</span></a></li>
                         </ul>
 						<div class="tabCont">
 							<div class="tabItem active" data-tab="tabItemA_1">
@@ -121,9 +121,6 @@
 								</p>
 							</div>
 						</div>
-						<style>
-							
-						</style>
 						<div class="slideCont">
 							<div class="titWrap">
 								<p class="gBold">기업 사례</p>
@@ -164,7 +161,7 @@
 										<div class="txtWrap">
 											<p class="tit icon03 gBold">AR기술 활용사례</p>
 											<p class="txt">
-												L’Oréal은 고객 교육 및 제품 사용법을 설명하는데 AR기술을 사용하고 있습니다.<br>
+												L'Oréal은 고객 교육 및 제품 사용법을 설명하는데 AR기술을 사용하고 있습니다.<br>
 												메이크업 애플리케이션을 통해 고객에게 제품을 실제로 사용하는 듯한<br class="for_mo">
 												경험을 줌으로써 제품 이해도와 구매 결정을 촉진시키는 효과를 가져왔습니다.
 											</p>
@@ -187,8 +184,8 @@
 				<div class="listWrap">
 					<div class="tabWrap">
 						<ul class="tabList">
-                            <li class="active" data-tab="tabItemB_1"><a href="javascript:void(0);"><span class="gBold">학습 데이터 분석을 통한<br> 학습 경로 설계</span></a></li>
-                            <li data-tab="tabItemB_2" class=""><a href="javascript:void(0);"><span class="gBold">적응형<br> 학습 시스템</span></a></li>
+                            <li class="active" data-tab="tabItemB_1"><a href="#link"><span class="gBold">학습 데이터 분석을 통한<br> 학습 경로 설계</span></a></li>
+                            <li data-tab="tabItemB_2" class=""><a href="#link"><span class="gBold">적응형<br> 학습 시스템</span></a></li>
                         </ul>
 						<div class="tabCont">
 							<div class="tabItem active" data-tab="tabItemB_1">
@@ -235,7 +232,7 @@
 										<p class="tit icon05 gBold">학습 스타일과 수요에 맞춘 교육 프로그램 구성</p>
 										<p class="txt">
 											자사 AI기술을 이용해 개인별 맞춤 교육 프로그램 생성 플랫폼인<br class="for_mo">
-											‘your learning’을 개발했습니다.<br>
+											'your learning'을 개발했습니다.<br>
 											학습자들이 언제든지 자신만의 교육 프로그램을 구성하고 수강할 수<br class="for_mo">
 											있도록 함으로써 교육 만족도와 이수율을 향상시킬 수 있었습니다.
 										</p>
@@ -256,8 +253,8 @@
 				<div class="listWrap">
 					<div class="tabWrap">
 						<ul class="tabList">
-                            <li class="active" data-tab="tabItemC_1"><a href="javascript:void(0);"><span class="gBold">온라인과 오프라인 학습<br> 장점 결합</span></a></li>
-                            <li data-tab="tabItemC_2" class=""><a href="javascript:void(0);"><span class="gBold">플렉서블<br> 학습 일정</span></a></li>
+                            <li class="active" data-tab="tabItemC_1"><a href="#link"><span class="gBold">온라인과 오프라인 학습<br> 장점 결합</span></a></li>
+                            <li data-tab="tabItemC_2" class=""><a href="#link"><span class="gBold">플렉서블<br> 학습 일정</span></a></li>
                         </ul>
 						<div class="tabCont">
 							<div class="tabItem active" data-tab="tabItemC_1">
@@ -452,7 +449,7 @@
 				</div>
 				<ul class="faqList">
                     <li class="active">
-                        <a href="javascript:void(0);">
+                        <a href="#link">
                             <p>잡아바 러닝센터를 이용하려면 별도의 회원가입이 필요한가요?</p>
                         </a>
                         <div class="answerWrap">
@@ -464,7 +461,7 @@
                         </div>
                     </li>
 					<li>
-                        <a href="javascript:void(0);">
+                        <a href="#link">
                             <p>잡아바 러닝센터는 무료인가요?</p>
                         </a>
                         <div class="answerWrap">
@@ -475,7 +472,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="javascript:void(0);">
+                        <a href="#link">
                             <p>온라인 교육 수강에 횟수 제한이 있나요?</p>
                         </a>
                         <div class="answerWrap">
@@ -485,7 +482,7 @@
                         </div>
                     </li>
 					<li>
-                        <a href="javascript:void(0);">
+                        <a href="#link">
                             <p>온라인 교육을 수강하면 수료증발급 이 가능한가요?</p>
                         </a>
                         <div class="answerWrap">
@@ -496,7 +493,7 @@
                         </div>
                     </li>
 					<li>
-                        <a href="javascript:void(0);">
+                        <a href="#link">
                             <p>모바일 학습이 가능한가요?</p>
                         </a>
                         <div class="answerWrap">
