--- a/html/thema/06.html
+++ b/html/thema/06.html
@@ -57,7 +57,7 @@
 				<ul class="menuList">
 					<li class="active">
 						<a href="#moveTo01">
-							<p>디치털학습</p>
+							<p>디지털학습</p>
 						</a>
 					</li>
 					<li>
@@ -109,8 +109,8 @@
 								<p class="icon01">
 									AI 기술을 사용하여 학습자의 학습 성과와 진행 상황을 분석하고,<br class="for_mo">
 									학습자가 잘 이해하고 있는 부분과 어려움을 겪는 부분을 파악합니다.<br>
-									이를 통해 학습자는 자신에게 필요한 맞춤형 학습 자료를 받아 학습 효과를 <br class="for_mo">
-									높일 수 있습니다.
+									이를 통해 학습자는 자신에게 필요한 맞춤형 학습 자료를 받아<br class="for_mo">
+									학습 효과를 높일 수 있습니다.
 								</p>
 							</div>
 							<div class="tabItem" data-tab="tabItemA_2">
@@ -197,9 +197,9 @@
 							</div>
 							<div class="tabItem" data-tab="tabItemB_2">
 								<p class="icon04">
-									학습자의 이해도와 진도 상황을 지속적으로 파악하여, 어려운 주제에 대해서는<br class="for_mo">
-									천천히, 이해도가 높은 주제는 빠르게 진행할 수 있는 맞춤형 학습 시스템을<br class="for_mo"> 
-									구현할 수 있습니다.
+									학습자의 이해도와 진도 상황을 지속적으로 파악하여,<br class="for_mo">
+									어려운 주제에 대해서는 천천히, 이해도가 높은 주제는 빠르게 진행할 수 있는<br class="for_mo"> 
+									맞춤형 학습 시스템을 구현할 수 있습니다.
 								</p>
 							</div>
 						</div>
@@ -219,8 +219,7 @@
 										<p class="txt">
 											예를 들어, 수학 문제를 풀 때 자주 틀리는 유형을 분석하여 해당 유형의 문제를<br class="for_mo">
 											더 연습할 수 있도록 커리큘럼을 설계합니다.<br>
-											사전 진단/중간 평가/실시간 모니터링 데이터를 합산하여 개인화 학습을<br class="for_mo">
-											가능하게 합니다.
+											중간 평가/ 실시간 모니터링 데이터를 활용하여 개인화 학습을 가능하게 합니다.
 										</p>
 									</div>
 								</li>
@@ -259,17 +258,16 @@
 						<div class="tabCont">
 							<div class="tabItem active" data-tab="tabItemC_1">
 								<p class="icon05">
-									온라인 학습의 시간과 장소의 자유로움과 오프라인 학습의 대면 상호작용을 결합하여,<br class="for_mo">
+									온라인 학습의 자유로움과 오프라인 학습의 대면 상호작용을 결합하여,<br class="for_mo">
 									학습자에게 최적의 학습 경험을 제공할 수 있습니다.<br>
-									예를 들어, 온라인으로 강의를 듣고 오프라인에서 실습이나 토론을 진행할 수<br class="for_mo">
-									있습니다.
+									예를 들어, 온라인으로 강의를 듣고 오프라인에서 실습 및 토론을 진행할 수 있습니다.
 								</p>
 							</div>
 							<div class="tabItem" data-tab="tabItemC_2">
 								<p class="icon06">
 									학습자는 개인 일정에 맞춰 학습을 진행할 수 있습니다.<br>
-									온라인 강의는 녹화된 상태로 제공되어 언제든지 볼 수 있으며, 오프라인 세션은<br class="for_mo">
-									필요한 때 참여할 수 있습니다.
+									온라인 강의는 녹화된 상태로 제공되어 언제든지 볼 수 있으며,<br class="for_mo">
+									오프라인 세션은 필요할 때 참여할 수 있습니다.
 								</p>
 							</div>
 						</div>
@@ -302,8 +300,8 @@
 										<p class="tit icon07 gBold">온라인 기본 교육 + 오프라인 팀 빌딩 실습</p>
 										<p class="txt">
 											Google은 하이브리드 학습을 통해 신입 사원 교육 프로그램을 운영합니다.<br>
-											신입 사원들은 온라인으로 기본 교육을 받고, 팀 빌딩 활동과 실습은 오프라인으로<br class="for_mo">
-											진행합니다. 
+											신입 사원들은 온라인으로 기본 교육을 받고, 팀 빌딩 활동과 실습은<br class="for_mo">
+											오프라인으로 진행합니다.
 										</p>
 									</div>
 								</li>
