--- a/index.html
+++ b/index.html
@@ -193,6 +193,31 @@
 				<td>페이지</td>
 				<td><a href="html/page/온라인박람회_템플릿.html" class="preview" target="_blank">온라인박람회_템플릿</a></td>
 			</tr>
+			<tr class="thema">
+				<td></td>
+				<td>테마</td>
+				<td><a href="html/thema/05.html" class="preview" target="_blank">테마 5호 공공기관 직무캠프</a></td>
+			</tr>
+			<tr class="thema">
+				<td></td>
+				<td>테마</td>
+				<td><a href="html/thema/06.html" class="preview" target="_blank">테마 6호 2024 hrd트렌드</a></td>
+			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/ai_역량검사(면접가이드 추가).html" class="preview" target="_blank">ai_역량검사(면접가이드 추가)</a></td>
+			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/ai_역량검사(면접가이드북).html" class="preview" target="_blank">ai_역량검사(면접가이드북)</a></td>
+			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/ai_역량검사(면접시사상식).html" class="preview" target="_blank">ai_역량검사(면접시사상식)</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
