--- a/index.html
+++ b/index.html
@@ -218,6 +218,16 @@
 				<td>페이지</td>
 				<td><a href="html/page/ai_역량검사(면접시사상식).html" class="preview" target="_blank">ai_역량검사(면접시사상식)</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz324.html" class="preview" target="_blank">뉴스레터 324호</a></td>
+			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz325.html" class="preview" target="_blank">뉴스레터 325호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
