--- a/html/wz/wz325.html
+++ b/html/wz/wz325.html
@@ -91,7 +91,7 @@
                       <tr>
                         <td>
                           <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=244781" target="_blank" style="text-decoration: none;">
-                            <img src="./images/wz325/wz325_01.png" alt="업무자동화 개발자 과정" width="800" style="display: block;width: 100%">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz325/wz325_01.png" alt="업무자동화 개발자 과정" width="800" style="display: block;width: 100%">
                           </a>
                         </td>
                       </tr> 
@@ -116,12 +116,12 @@
                                         <tr>
                                           <td>
                                             <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=244782" target="_blank">
-                                              <img src="./images/wz325/wz325_02.png" alt="2024년 경기북부 직업교육 3C코딩강사 양성과정" width="360" style="display: block;">
+                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz325/wz325_02.png" alt="2024년 경기북부 직업교육 3C코딩강사 양성과정" width="360" style="display: block;">
                                             </a>
                                           </td>
                                           <td>
                                             <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=244778" target="_blank">
-                                              <img src="./images/wz325/wz325_03.png" alt="이모티콘크리에이터 과정 참여자 모집" width="360" style="display: block;">
+                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz325/wz325_03.png" alt="이모티콘크리에이터 과정 참여자 모집" width="360" style="display: block;">
                                             </a>
                                           </td>
                                         </tr>
@@ -139,12 +139,12 @@
                                       <tr>
                                         <td>
                                           <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=244797" target="_blank">
-                                            <img src="./images/wz325/wz325_04.png" alt="간호조무사 실무 직업훈련 참여자 모집" width="360" style="display: block;">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz325/wz325_04.png" alt="간호조무사 실무 직업훈련 참여자 모집" width="360" style="display: block;">
                                           </a>
                                         </td>                                       
                                         <td>
                                           <a href="https://www.jobaba.net/edutrn/dtl2020.do?seq=244826" target="_blank">
-                                            <img src="./images/wz325/wz325_05.png" alt="제조공정 디지털 전환을 위한 로봇, 메타버스 융합 전문가 양성 과정" width="360" style="display: block;">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz325/wz325_05.png" alt="제조공정 디지털 전환을 위한 로봇, 메타버스 융합 전문가 양성 과정" width="360" style="display: block;">
                                           </a>
                                         </td>
                                         
@@ -166,7 +166,7 @@
                       <tr>
                         <td>
                           <a href="https://www.jobaba.net/thema/themeInfo.do" target="_blank" style="text-decoration: none;">
-                            <img src="./images/wz325/wz325_06.png" alt="2024 hrd 트렌드" width="800" style="display: block;">                                
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz325/wz325_06.png" alt="2024 hrd 트렌드" width="800" style="display: block;">                                
                           </a>
                         </td>
                       </tr>
@@ -192,28 +192,28 @@
                               <tr>
                                 <td align="center">
                                   <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=10750" target="_blank" style="text-decoration: none;">      
-                                    <img src="./images/wz325/wz325_07.png" alt="[경기창조경제혁신센터] 정규직 및 계약직 직원 채용" width="740" style="vertical-align: top;">
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz325/wz325_07.png" alt="[경기창조경제혁신센터] 정규직 및 계약직 직원 채용" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
                                   <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=10736" target="_blank" style="text-decoration: none;">      
-                                    <img src="./images/wz325/wz325_08.png" alt="[남한산성세계유산센터] 기간제 근로자 수시채용" width="740" style="vertical-align: top;">
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz325/wz325_08.png" alt="[남한산성세계유산센터] 기간제 근로자 수시채용" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
                                   <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=10580" target="_blank" style="text-decoration: none;">      
-                                    <img src="./images/wz325/wz325_09.png" alt="[경기도해양수산자원연구소] 제6차 기간제노동자 채용" width="740" style="vertical-align: top;">
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz325/wz325_09.png" alt="[경기도해양수산자원연구소] 제6차 기간제노동자 채용" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
                                   <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=10471" target="_blank" style="text-decoration: none;">      
-                                    <img src="./images/wz325/wz325_10.png" alt="[광명도시공사] 2024년 6차(광명동굴 성수기) 기간제근로자 공개채용" width="740" style="vertical-align: top;">
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz325/wz325_10.png" alt="[광명도시공사] 2024년 6차(광명동굴 성수기) 기간제근로자 공개채용" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
