--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz325.html" class="preview" target="_blank">뉴스레터 325호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz326.html" class="preview" target="_blank">뉴스레터 326호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
