--- a/html/wz/wz326.html
+++ b/html/wz/wz326.html
@@ -138,8 +138,8 @@
                                     <tbody>
                                       <tr>
                                         <td>
-                                          <a href="#" target="_blank">
-                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz326/wz326_04.png" alt="경기 베이비부머 해외진출 사업" width="360" style="display: block;">
+                                          <a href="https://www.jobaba.net/sprtPlcy/info/view2020.do?seq=13490" target="_blank">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz326/wz326_11.png" alt="경기 베이비부머 해외진출 사업" width="360" style="display: block;">
                                           </a>
                                         </td>                                       
                                         <td>
