--- a/index.html
+++ b/index.html
@@ -233,6 +233,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz326.html" class="preview" target="_blank">뉴스레터 326호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>취업가이드</td>
+				<td><a href="html/page/취업가이드.html" class="preview" target="_blank">취업가이드</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
