--- a/index.html
+++ b/index.html
@@ -238,6 +238,11 @@
 				<td>취업가이드</td>
 				<td><a href="html/page/취업가이드.html" class="preview" target="_blank">취업가이드</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz327.html" class="preview" target="_blank">뉴스레터 327호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
