--- a/index.html
+++ b/index.html
@@ -243,6 +243,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz327.html" class="preview" target="_blank">뉴스레터 327호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz328.html" class="preview" target="_blank">뉴스레터 328호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
