--- a/index.html
+++ b/index.html
@@ -253,6 +253,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/corp/corp07.html" class="preview" target="_blank">기업회원 뉴스레터 7월호</a></td>
 			</tr>
+			<tr class="thema">
+				<td></td>
+				<td>테마</td>
+				<td><a href="html/thema/07.html" class="preview" target="_blank">테마 7호 취업성공사례 모음</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
