--- a/html/thema/07.html
+++ b/html/thema/07.html
@@ -316,7 +316,7 @@
 
 			</div>
 		</article>
-		<!-- 
+		
 		<article class="cont02">
 			<div class="innerSection">
 				<div class="titWrap">
@@ -347,22 +347,22 @@
 								<li class="swiper-slide">
 									<div class="txtWrap bg13">
 										<p>
-											저는 경영학과에 입학한 후 꿈을 찾지 못한 채<br>
+											저는 경영학과에 입학한 후 꿈을 찾지 못한 채<br class="for_mo">
 											막연히 학업을 이어가고 있었습니다.
 										</p>
 										<p>
-											그러던 중 <span class="gBold">잡아바 채널톡 상담</span>을 통해<br>
-											인사팀(HR) 진로에 확신이 섰고, 여러 정보를 제공해주신<br>
+											그러던 중 <span class="gBold">잡아바 채널톡 상담</span>을 통해<br class="for_mo">
+											인사팀(HR) 진로에 확신이 섰고, 여러 정보를 제공해주신<br class="for_mo">
 											<span class="gBold">상담사님 덕분에 직무 이해도를 높일 수</span> 있었습니다.
 										</p>
 										<p>
-											상담사님이 제시해주신 <span class="gBold">A to Z 취업 로드맵을 바탕으로<br>
-											자소서첨삭, AI역량검사 등 잡아바의 취업지원 시스템</span>을<br>
-											활용하여 역량을 키울 수 있었고,<br>
+											상담사님이 제시해주신 <span class="gBold">A to Z 취업 로드맵을 바탕으로<br class="for_mo">
+											자소서첨삭, AI역량검사 등 잡아바의 취업지원 시스템</span>을<br class="for_mo">
+											활용하여 역량을 키울 수 있었고,<br class="for_mo">
 											마침내 원하던 대기업 인사팀에 취업할 수 있었습니다!
 										</p>
 										<p>
-											끝으로 잡아바 상담사님을 만나 원활하게 취업을 할 수 있어<br>
+											끝으로 잡아바 상담사님을 만나 원활하게 취업을 할 수 있어<br class="for_mo">
 											진심으로 감사 인사를 드리고 싶습니다.<br>
 											감사합니다^^
 										</p>
@@ -374,9 +374,9 @@
 										<div>
 											<strong>강점</strong>
 											<ul>
-												<li>진로는 불명확했으나, 컴퓨터활용능력, 토익 등<br>
+												<li>진로는 불명확했으나, 컴퓨터활용능력, 토익 등<br class="for_tb">
 													자격증 공부는 꾸준히 했음</li>
-												<li>상담을 통해 내담자 스스로 진로 탐색에 대한<br>
+												<li>상담을 통해 내담자 스스로 진로 탐색에 대한<br class="for_tb">
 													적극적인 자세를 취함</li>
 											</ul>
 										</div>
@@ -390,10 +390,10 @@
 										<div>
 											<strong>상담목표</strong>
 											<p>
-												구직자의 진로와 적성에 대한 깊은 탐색 이후<br>
-												인사(HR) 직무 분야와 관련한 청년인턴, 일경험 등을 통해<br>
-												실무 경험을 보완. 희망 기업직무에 대한 우대/필수 사항을<br>
-												정확하게 점검해 부족한 스펙 및 경력을 채워나가는<br>
+												구직자의 진로와 적성에 대한 깊은 탐색 이후<br class="for_mo">
+												인사(HR) 직무 분야와 관련한 청년인턴, 일경험 등을 통해<br class="for_mo">
+												실무 경험을 보완. 희망 기업직무에 대한 우대/필수 사항을<br class="for_mo">
+												정확하게 점검해 부족한 스펙 및 경력을 채워나가는<br class="for_mo">
 												A to Z 로드맵을 제시하여 원활한 취업까지 지원
 											</p>
 										</div>
@@ -402,18 +402,18 @@
 								<li class="swiper-slide">
 									<div class="txtWrap style03">
 										<ul>
-											<li>취업진단검사를 통해 구직자의 부족한 진로 방향성과<br>
+											<li>취업진단검사를 통해 구직자의 부족한 진로 방향성과<br class="for_mo">
 												적성을 분석, <span class="gBold">인사직무의 적합성을 점검</span></li>
-											<li>실제 인사경력 근무 경험을 가져볼 수 있는 <span class="gBold">인턴 또는 <br>
+											<li>실제 인사경력 근무 경험을 가져볼 수 있는 <span class="gBold">인턴 또는<br class="for_mo">
 												단기 계약직까지 입사지원 범위를 확대</span></li>
-											<li>내담자의 스펙을 바탕으로 희망 직무 우대사항을 <br>
-												파악하고, 부족한점을 보완하였고, <br>
+											<li>내담자의 스펙을 바탕으로 희망 직무 우대사항을<br class="for_mo">
+												파악하고, 부족한점을 보완하였고,<br class="for_mo">
 												<span class="gBold">잡아바 A.I역량검사를 통해 실전 면접 능력을 향상시킴</span></li>
-											<li>자기소개서 작성 후 <span class="gBold">잡아바 첨삭 서비스를 통해 <br>
+											<li>자기소개서 작성 후 <span class="gBold">잡아바 첨삭 서비스를 통해<br class="for_mo">
 												전문 컨설턴트의 차별화된 첨삭 지원</span></li>
-											<li>2곳의 청년인턴과 1곳의 계약직에 최종 합격하였고, <br>
+											<li>2곳의 청년인턴과 1곳의 계약직에 최종 합격하였고,<br class="for_mo">
 												가장 가깝고 채용연계 혜택이 있는 기업을 선택함</li>
-											<li>인턴 종료 후 채용 연계 평가에서 고득점을 받아 <br>
+											<li>인턴 종료 후 채용 연계 평가에서 고득점을 받아<br class="for_mo">
 												정규직으로 입사 확정됨</li>
 										</ul>
 									</div>
@@ -451,22 +451,22 @@
 								<li class="swiper-slide">
 									<div class="txtWrap bg14">
 										<p>
-											‘정규직’일자리만을 고집하던 저는<br>
+											‘정규직’일자리만을 고집하던 저는<br class="for_mo">
 											잡아바 상담사님을 만나고 생각이 완전히 바뀌었습니다.
 										</p>
 										<p>
-											청년인턴, 일경험 등 실무를 체험해 보면서<br>
-											직무적합성과 저의 강점, 약점 등을 알 수 있었고<br>
+											청년인턴, 일경험 등 실무를 체험해 보면서<br class="for_mo">
+											직무적합성과 저의 강점, 약점 등을 알 수 있었고<br class="for_mo">
 											진로에 대한 확신도 들게 되었습니다.
 										</p>
 										<p>
-											특히, <span class="gBold">상담사님의 추천대로 업무일지를 꾸준히 작성한 것이<br>
+											특히, <span class="gBold">상담사님의 추천대로 업무일지를 꾸준히 작성한 것이<br class="for_mo">
 											큰 자산이 되어</span> 채용 연계 평가 면접 때 큰 도움이 되었습니다.<br>
-											그 덕분에 인턴에서 정규직 전환이라는 큰 선물을<br>
+											그 덕분에 인턴에서 정규직 전환이라는 큰 선물을<br class="for_mo">
 											받게 된 것 같습니다.
 										</p>
 										<p>
-											취업을 바라보는 저의 좁은 시야를 확장 시켜 주시고<br>
+											취업을 바라보는 저의 좁은 시야를 확장 시켜 주시고<br class="for_mo">
 											취업 성공을 맛볼 수 있게 도와주신 잡아바 상담사님<br>
 											너무 감사합니다!
 										</p>
@@ -478,9 +478,9 @@
 										<div>
 											<strong>강점</strong>
 											<ul>
-												<li>'나에 대한 분석과 파악'이 잘 이루어져서 일하고자 하는<br>
+												<li>'나에 대한 분석과 파악'이 잘 이루어져서 일하고자 하는<br class="for_mo">
 													분야가 명확함.</li>
-												<li>자격증 취득, 대외활동, 공모전 수상 등을 통해<br>
+												<li>자격증 취득, 대외활동, 공모전 수상 등을 통해<br class="for_mo">
 													전문성과 차별성 확보.</li>
 											</ul>
 										</div>
@@ -488,17 +488,17 @@
 											<strong>약점</strong>
 											<ul>
 												<li>지원하고자 하는 직무와 관련된 실무 경력이 전무함</li>
-												<li>희망 취업분야에서 요구하는 필수조건/우대조건의<br>
+												<li>희망 취업분야에서 요구하는 필수조건/우대조건의<br class="for_mo">
 													파악 부족으로 맞춤 준비를 하지 못하고 있음.</li>
-												<li>거듭된 서류전형 불합격으로 인해 자신감이<br>
+												<li>거듭된 서류전형 불합격으로 인해 자신감이<br class="for_mo">
 													하락하고 있음.</li>
 											</ul>
 										</div>
 										<div>
 											<strong>상담목표</strong>
 											<p>
-												희망하는 분야와 관련한 청년인턴, 일경험 등을 통해<br>
-												실무 경험을 쌓고, 이를 바탕으로 실무 역량이 있는<br>
+												희망하는 분야와 관련한 청년인턴, 일경험 등을 통해<br class="for_mo">
+												실무 경험을 쌓고, 이를 바탕으로 실무 역량이 있는<br class="for_mo">
 												준비된 적임자임을 어필하자!
 											</p>
 										</div>
@@ -507,17 +507,17 @@
 								<li class="swiper-slide">
 									<div class="txtWrap style03 style04">
 										<ul>
-											<li>‘잡아바’ 내 지자체의 청년인턴 공고나 행정안전부 등<br>
+											<li>‘잡아바’ 내 지자체의 청년인턴 공고나 행정안전부 등<br class="for_mo">
 												정부 조직의 채용공고를 루틴처럼 확인하도록 안내</li>
-											<li>인턴 정보 특화 사이트를 안내하고 입직 희망 분야 관련<br>
-												공고를 확인 후 지원 조건의 80% 이상 부합하면<br>
+											<li>인턴 정보 특화 사이트를 안내하고 입직 희망 분야 관련<br class="for_mo">
+												공고를 확인 후 지원 조건의 80% 이상 부합하면<br class="for_mo">
 												적극적으로 지원</li>
-											<li>사기업의 정규직 일자리 채용공고만 찾아보던<br>
-												종전의 패턴에서 벗어나 인턴 또는 단기 계약직까지<br>
+											<li>사기업의 정규직 일자리 채용공고만 찾아보던<br class="for_mo">
+												종전의 패턴에서 벗어나 인턴 또는 단기 계약직까지<br class="for_mo">
 												범위를 확대하여 실무 경험을 쌓을 수 있도록 독려</li>
-											<li>총 3곳의 청년인턴 공고에 합격하였고, <br>
+											<li>총 3곳의 청년인턴 공고에 합격하였고,<br class="for_mo">
 												그 중 채용 연계 혜택이 있는 1곳 선택</li>
-											<li>인턴 종료 후 채용 연계 평가에서 고득점을 받아<br>
+											<li>인턴 종료 후 채용 연계 평가에서 고득점을 받아<br class="for_mo">
 												정규직으로 입사 확정됨</li>
 										</ul>
 									</div>
@@ -532,12 +532,13 @@
 				</div>
 			</div>
 		</article>
+
 		<article class="cont03">
 			<div class="innerSection">
 				<div class="tabWrap">
 					<ul class="tabList">
-						<li class="active" data-tab="tabItemA_1"><a href="javascript:void(0);"><span class="gBold">취업역량강화 서비스</span></a></li>
-						<li data-tab="tabItemA_2"><a href="javascript:void(0);"><span class="gBold">취업지원 정책</span></a></li>
+						<li class="active" data-tab="tabItemA_1"><a href="javascript:void(0);"><span class="gBold">취업역량강화<br class="for_pc"> 서비스</span></a></li>
+						<li data-tab="tabItemA_2"><a href="javascript:void(0);"><span class="gBold">취업지원<br class="for_pc"> 정책</span></a></li>
 					</ul>
 					<div class="tabCont">
 						<div class="tabItem active" data-tab="tabItemA_1">
@@ -619,7 +620,6 @@
 				</div>
 			</div>
 		</article>
-		 -->
 
 	</div>
 	<!--잡아바 js-->
