--- a/html/thema/07.html
+++ b/html/thema/07.html
@@ -400,7 +400,7 @@
 									</div>
 								</li>
 								<li class="swiper-slide">
-									<div class="txtWrap style03">
+									<div class="txtWrap style03 style04">
 										<ul>
 											<li>취업진단검사를 통해 구직자의 부족한 진로 방향성과<br class="for_mo">
 												적성을 분석, <span class="gBold">인사직무의 적합성을 점검</span></li>
