--- a/html/thema/07.html
+++ b/html/thema/07.html
@@ -32,7 +32,7 @@
 		<article class="mainVisual">			
 			<div class="innerSection">
 				<div class="titWrap">
-					<h2><img src="./images/20240731/main_tit.png" alt="취업성공사례 모음 잡아바.zip"></h2>
+					<h2><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240731/main_tit.png" alt="취업성공사례 모음 잡아바.zip"></h2>
 				</div>
 				<div class="txtWrap">
 					<div class="txtBox">
@@ -47,7 +47,7 @@
 		<article class="cont01">
 			<div class="innerSection">
 				<div class="titWrap">
-					<h3><img src="./images/20240731/cont01_tit.png" alt="잡아바 취업성공사례"></h3>
+					<h3><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240731/cont01_tit.png" alt="잡아바 취업성공사례"></h3>
 				</div>
 				<div class="swiperArea">
 					<div class="slideTit">
@@ -75,6 +75,9 @@
 						<div class="swiper-container">
 							<ul class="swiper-wrapper">
 								<li class="swiper-slide">
+									<img src="./images/20240731/slide_img01.png" alt="">
+								</li>
+								<!-- <li class="swiper-slide">
 									<div class="txtWrap bg01">
 										<p>
 											저는 43개의 지원서와 7개의 면접을 거쳐<br class="for_mo">
@@ -128,7 +131,7 @@
 											힘내시길 바랍니다!
 										</p>
 									</div>
-								</li>
+								</li> -->
 							</ul>
 							
 						</div>
@@ -320,7 +323,7 @@
 		<article class="cont02">
 			<div class="innerSection">
 				<div class="titWrap">
-					<h3><img src="./images/20240731/cont02_tit.png" alt="잡아바 상담talk 사례"></h3>
+					<h3><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20240731/cont02_tit.png" alt="잡아바 상담talk 사례"></h3>
 				</div>
 				<div class="swiperArea style02">
 					<div class="slideTit">
@@ -537,8 +540,8 @@
 			<div class="innerSection">
 				<div class="tabWrap">
 					<ul class="tabList">
-						<li class="active" data-tab="tabItemA_1"><a href="javascript:void(0);"><span class="gBold">취업역량강화<br class="for_pc"> 서비스</span></a></li>
-						<li data-tab="tabItemA_2"><a href="javascript:void(0);"><span class="gBold">취업지원<br class="for_pc"> 정책</span></a></li>
+						<li class="active" data-tab="tabItemA_1"><a href="#"><span class="gBold">취업역량강화<br class="for_pc"> 서비스</span></a></li>
+						<li data-tab="tabItemA_2"><a href="#"><span class="gBold">취업지원<br class="for_pc"> 정책</span></a></li>
 					</ul>
 					<div class="tabCont">
 						<div class="tabItem active" data-tab="tabItemA_1">
@@ -654,10 +657,10 @@
 				loop: true,
 				observer: true,
 				observeParents: true,
-				// autoplay: {
-				// 	delay: 5000,
-				// 	disableOnInteraction: false
-				// },
+				autoplay: {
+					delay: 8000,
+					disableOnInteraction: false
+				},
 				pagination: {
 					el: $slider.find('.swiper-pagination.type'+i),
 					type: 'bullets',
@@ -670,7 +673,8 @@
 			});
 		});
 		function tabList($btn, $items, tabAttr) {
-			$btn.click(function() {
+			$btn.click(function(e) {
+				e.preventDefault();
 				var tab = $(this).attr(tabAttr);
 				$btn.removeClass('active');
 				$(this).addClass('active');
