--- a/html/thema/07 copy.html
+++ b/html/thema/07 copy.html
@@ -406,10 +406,10 @@
 				loop: true,
 				observer: true,
 				observeParents: true,
-				// autoplay: {
-				// 	delay: 8000,
-				// 	disableOnInteraction: false
-				// },
+				autoplay: {
+					delay: 8000,
+					disableOnInteraction: false
+				},
 				pagination: {
 					el: $slider.find('.swiper-pagination.type'+i),
 					type: 'bullets',
