--- a/index.html
+++ b/index.html
@@ -258,6 +258,11 @@
 				<td>테마</td>
 				<td><a href="html/thema/07.html" class="preview" target="_blank">테마 7호 취업성공사례 모음</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz329.html" class="preview" target="_blank">뉴스레터 329호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
