--- a/index.html
+++ b/index.html
@@ -263,6 +263,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz329.html" class="preview" target="_blank">뉴스레터 329호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/job_letter_ver01.html" class="preview" target="_blank">공공일자리 뉴스레터 ver01</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
